@@ -195,6 +195,13 @@ class rcube_smtp
       return false;
     }
 
+    // RFC2298.3: remove envelope sender address
+    if (preg_match('/Content-Type: multipart\/report/', $text_headers)
+      && preg_match('/report-type=disposition-notification/', $text_headers)
+    ) {
+      $from = '';
+    }
+
     // set From: address
     if (PEAR::isError($this->conn->mailFrom($from)))
     {
